Create hexawatch for gear s2

--- a/gear/index.html
+++ b/gear/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div id="container">
-        <canvas id="canvas-layout"></canvas>
         <canvas id="canvas-content"></canvas>
+        <canvas id="canvas-skeleton"></canvas>
     </div>
     <script src="js/app.js"></script>
 </body>
