--- a/gear/index.html
+++ b/gear/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="container">
+        <canvas id="canvas-background"></canvas>
         <canvas id="canvas-content"></canvas>
         <canvas id="canvas-skeleton"></canvas>
     </div>
